GNOME Bugzilla – Bug 777914
nm-online: zero timeout causes floating point error
Last modified: 2017-02-02 10:25:47 UTC
$ nm-online -t 0 Floating point exception (core dumped) Introduced in commit c5f17a97ea8e4cee85c93ee9cfa04057f83e13ab Thread 1 "nm-online" received signal SIGFPE, Arithmetic exception. 0x0000000000401574 in handle_timeout (user_data=0x7fffffffd830) at clients/nm-online.c:111 111 progress_next_step_i = (elapsed_ms / data->progress_step_duration) + 1;
thanks for reporting master: https://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=34acecf544b364a958f0ffadd88be52c5bdd63e5 nm-1-6: https://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=1125ed9eedc043a513937c7061e0cb4fa4245742
Thanks for the fix However, there is a regression with the exit code when the connection is already established: $ nm-online -t 0 ; echo $? # 0 with nm-1.4.4 # 1 with master
I see. It's quite messed up :( Fix follows.
now it should be fine. master: https://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=f7875a42b0f3a58ce152ec53642ecbb993d3073b nm-1-6: https://cgit.freedesktop.org/NetworkManager/NetworkManager/commit/?id=45847ccee05e6ac95b6cce50657872b59f51a81a