nm-online: fix division-by-zero with zero timeout

$ nm-online -t 0
  Floating point exception (core dumped)

Fixes: c5f17a97ea8e4cee85c93ee9cfa04057f83e13ab

https://bugzilla.gnome.org/show_bug.cgi?id=777914
(cherry picked from commit 34acecf544b364a958f0ffadd88be52c5bdd63e5)